--- a/BE-COM/UI/FrmIniciarSesion.resx
+++ b/BE-COM/UI/FrmIniciarSesion.resx
@@ -957,7 +957,7 @@
         da9mGk6xBcqrWd3LqYZTbIHyclr3eq7hFCrwvZ4X2QftOLwqWjiXtAAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="Panel3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pnFormulario.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         /9j/4AAQSkZJRgABAgEAAAAAAAD/4gIcSUNDX1BST0ZJTEUAAQEAAAIMbGNtcwIQAABtbnRyUkdCIFhZ
         WiAH3AABABkAAwApADlhY3NwQVBQTAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA9tYAAQAAAADTLWxj
