--- a/BE-COM/UI/FrmRegistrarUsuario.resx
+++ b/BE-COM/UI/FrmRegistrarUsuario.resx
@@ -121,7 +121,7 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="Button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnVolver.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAA2xJREFUaEPt
         l01IVFEUxx+DRIuIFtEqIloE6TiOM6mZiRVi0iKhIqJaSBAUBIa0qBbRfDrjN5jFRBGYEQUREYHzPpx5
@@ -234,17 +234,6 @@
         URzXffCDeBB8ZF/hbby8Ibn22k7O3bW1czIBaRfHdR/sBtpEJkBzYrrd3i7Sx0nAY5Mijus+GEOoVcki
         HdaSANPTyANpnct9tPbegNzDn0ejOK77QLDf2gVdY14m0Fl4YO1CCaCrVTs9UxzXOzgJELuMyU5Be3X8
         BsT2swe+ooNg88FpZKtYZL8eCgoKCgoKCgoKCucVgcBfiL69UcLnF9AAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="PictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAABJ0lEQVRYR+3XLQ7CQBQEYEwJF0EgOACn
-        wBJsPQ6FwWMRXICEK9QTgoMDYLgEFmYaRDPvkd1NfwSp+BKy+7ozDSRkB5NtkUEOd3h3hFnMzFiAH7yh
-        LuQs0OWbqzsLeBud+asCDzjAGpawqLiA90xjBXYwAp7nOYH3XCMFzqCBqtUCc9BA1WqBMWggTWEPDH+C
-        92wjBYbghXuzRhMFNJz45t6swWF3I4GG08/vXHHY3Uig4dRqAR5epeG0Ap27gjmPw2YxQMNibcCcxw2z
-        GKAHxzqCOY8bZjFAD451A3MeN8xiQPVPhjSIZqBzLzDncdgsJtJw4o/OmzU47G4k0HDqC/QF+gJ9gaQC
-        da9mGk6xBcqrWd3LqYZTbIHyclr3eq7hFCrwvZ4X2QftOLwqWjiXtAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="PictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
