De nuevo a desbaratar todo.

--- a/BE-COM/UI/FrmMostrarBeneficios.resx
+++ b/BE-COM/UI/FrmMostrarBeneficios.resx
@@ -310,6 +310,52 @@
         WZMtZWvUAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="btnRegistrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAATlJREFUaEPt
+        VtsNgzAMZJAO0P5XTMEQHYWxYDpqy7bsPCg/ocStTzpdSEJtnxPUIRAIBAKBQKAjPOb1dp/XDXRD1fGC
+        45G39Yu8AFQpALT/AiDpagFMLx3A41LSRQHYAeN4Ti9HCN122gFIkguQLw/S2SXG5Hfo6QhpB2R8eQGU
+        3BGXJ7tdENam+jspOVx7qKN0ru1F5QQLJdbX9pTDtQcG+AY5XHvgj5NT0gF6VvdkziqtCa3TVpUndkCT
+        TbU2Z9dyHu3hcO1hnRKXxTU7p0pJpnvqqjy1AHIo19qc1U9rNeVw7QEOjZYQjJnMTaCQjDpqxi/Za9/J
+        nzncNYBE4FtOTpaMvxLnQzqACRvnf6UDS/8FQKK7HYA5LwWQ46KG3jqASSfd8H4HnH6FKHkndyAQCAQC
+        gcD/YBjeyFcFZZmX8xgAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnEliminar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAqtJREFUaEPt
+        lk1oE0EUx4MUEQ8eevQgniRNNEk1jZrSKrFVWnJQPAjqxZsXL5495GtralvTav0oPfRkpXgTxG52k80m
+        1WKjB1GoIFikB/FQeiilFCn1vZ157LKNFoStU5gfPCZ5b5LM//1nZ+KTSCQSiUQiEZCOQjXa2ld61zVa
+        O8hTu4f4oJEMpour/pS6Gc7p9csT9f28tDvoHK6GgpniCgpogQAnXtx6+WUP1s49fHOos1AJWRNF5vRg
+        JRlIqRv+1LQloq2/nO0omLGjmeKPY1ltsfvRW/G3VuyecRsXTxFMq2v0OpTT6pcmPoi/tU7cLY2jC85o
+        4eNx2FopddbaWsJydXJ+b1jRDbZ4lQuwx7Z+I8unikvv05lm2Pdf2cLZFqIR49SAcZ1PFZczw1U/nExL
+        bgdwDKSLa3BvxPhUcWkfqnQF0uov6jxFRNFLvWOzzXya2JwcMG5S53Fs7dPNa5Ofm3jZey48rsW7R83E
+        v0bPk5lINF8eoe6DI+vxITPBv957ghntOzsG2QKwk/Z+ppxzZDWKsFIu3Xg+1wTb5hWbM70Jl9vS2ZHq
+        Ef4T3mILwB/WVqN5/RlGOKctMCGsFlG0j7w2BQ+plcNAAfg9yfH3B+Ay+0R5OKXme8bmvH8OmADW3YhS
+        XuRpHy7W2flYXruD+StTC/tAqCWMHLA+ACQe1A5D939iHgMutte85B1OB7YKsB2wBXyzBFDNKQBpv2/G
+        8RiFI3YZTqnzPO0d5ACGWwDlMbY6wPJuAQj88buI9wR/6y0oALv5JwcoGjmA0UjAjuKFAzvK9g6wo1E6
+        4BW2A42O0e0cEEQAdrKxANZlHIV24O/3gNsBJoBqQj0DEBvwfhkDLqN1cgCDXU6s5pgv1hai0dl590iv
+        G/2VkEgkEolEIvmv+Hy/AboT74oURZo1AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnModificar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAt1JREFUaENj
+        GAWjYBSMglEwCkbBKBjEwGnSYSWD1j1X9Vr2vDXr3F8Qs+wsG1RqaACg43drNuz8r9Gw4z+I1mvefdO6
+        96APVHpwg+TV5zmM2vfO12rY+RfkeIhHIDTQY9sdJx3Wgiod3MB+wiET/dY9h2ExAcNajTt/m3Tu64Qq
+        G9yga/9xJsueA2G6zbsfIscECHvPOKwBVTY4gOeM42LG7XtXA5MIhsPCFp7lMOnYV6PdtOszKBaA9NfA
+        uacEoNKDAwDT/UxQyAKTyE8ge6L3zBNCUCk4cJ92TMaobe9i0859NVChwQHsJx7WA6VtWPIAYZ2mXa/N
+        uvZnpaw8wwJVNngBsHTZDysyYZkVxtZr2X3Zuu+gG1Tp4APATBqEHPK4sGHbns0uU45IQbUNDhC55DwH
+        sIS5C3IgegyAShxkMVCS8p2NmS8GFAAzYwUshAlhYH7IgGobHABYokgAi8OPsLIdlYaEPAwD88HFhBXn
+        BldmBhaVc0EOhSQTVBoZgzwAzMQuUG2DA9hNOGQEa+tgxgDEIyA2iAZm3o1QbYMHmHbuPwjMvG9xxQDE
+        A8AaF1ipOU0+ogLVNnhA0abTLIkrzrIBPfEcEtLoGBIDxh17u6FaBiew6j0Uoteyt9OobfdiUMgjY2Cx
+        +dJ/zkk+qNLBAfLWHOYCpn8rKBcOSjafYoIkKUQsmHftT4FKDx7gM/0AB7DNA86YwG6jDlQYDILnn5ax
+        m3DYCtjqbNRv2XM+dfU5JqjU4AFhK+6x6TTvBocwqPEGbFnOd5t2TA4qDQaRS87yADszFlDu4ALFO++w
+        ASulv7B0DvKIduOu78B+QL/PrBMiUGWDFzTvOcWi27zzO6jMRy//gZn2o23/ocGX7tEBMOm8RY4BENZv
+        2X3WvHt/TNzyc4N/+ARYbL4GhTooDwD7AWuBoW4HlRoaANgCvQlsB/W6Tj2mABUaBaNgFIyCUTAKRsEo
+        GDqAgQEAf+oEwGP8KHQAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="btnVolver.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAA2xJREFUaEPt
@@ -330,50 +376,10 @@
         rhLGzAgYJywOKezz2Cot220EAoFAIBAI/msk6TfspFNRFMDfIgAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="btnEditar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAt1JREFUaENj
-        GAWjYBSMglEwCkbBKBjEwGnSYSWD1j1X9Vr2vDXr3F8Qs+wsG1RqaACg43drNuz8r9Gw4z+I1mvefdO6
-        96APVHpwg+TV5zmM2vfO12rY+RfkeIhHIDTQY9sdJx3Wgiod3MB+wiET/dY9h2ExAcNajTt/m3Tu64Qq
-        G9yga/9xJsueA2G6zbsfIscECHvPOKwBVTY4gOeM42LG7XtXA5MIhsPCFp7lMOnYV6PdtOszKBaA9NfA
-        uacEoNKDAwDT/UxQyAKTyE8ge6L3zBNCUCk4cJ92TMaobe9i0859NVChwQHsJx7WA6VtWPIAYZ2mXa/N
-        uvZnpaw8wwJVNngBsHTZDysyYZkVxtZr2X3Zuu+gG1Tp4APATBqEHPK4sGHbns0uU45IQbUNDhC55DwH
-        sIS5C3IgegyAShxkMVCS8p2NmS8GFAAzYwUshAlhYH7IgGobHABYokgAi8OPsLIdlYaEPAwD88HFhBXn
-        BldmBhaVc0EOhSQTVBoZgzwAzMQuUG2DA9hNOGQEa+tgxgDEIyA2iAZm3o1QbYMHmHbuPwjMvG9xxQDE
-        A8AaF1ipOU0+ogLVNnhA0abTLIkrzrIBPfEcEtLoGBIDxh17u6FaBiew6j0Uoteyt9OobfdiUMgjY2Cx
-        +dJ/zkk+qNLBAfLWHOYCpn8rKBcOSjafYoIkKUQsmHftT4FKDx7gM/0AB7DNA86YwG6jDlQYDILnn5ax
-        m3DYCtjqbNRv2XM+dfU5JqjU4AFhK+6x6TTvBocwqPEGbFnOd5t2TA4qDQaRS87yADszFlDu4ALFO++w
-        ASulv7B0DvKIduOu78B+QL/PrBMiUGWDFzTvOcWi27zzO6jMRy//gZn2o23/ocGX7tEBMOm8RY4BENZv
-        2X3WvHt/TNzyc4N/+ARYbL4GhTooDwD7AWuBoW4HlRoaANgCvQlsB/W6Tj2mABUaBaNgFIyCUTAKRsEo
-        GDqAgQEAf+oEwGP8KHQAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnEliminar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAqtJREFUaEPt
-        lk1oE0EUx4MUEQ8eevQgniRNNEk1jZrSKrFVWnJQPAjqxZsXL5495GtralvTav0oPfRkpXgTxG52k80m
-        1WKjB1GoIFikB/FQeiilFCn1vZ157LKNFoStU5gfPCZ5b5LM//1nZ+KTSCQSiUQiEZCOQjXa2ld61zVa
-        O8hTu4f4oJEMpour/pS6Gc7p9csT9f28tDvoHK6GgpniCgpogQAnXtx6+WUP1s49fHOos1AJWRNF5vRg
-        JRlIqRv+1LQloq2/nO0omLGjmeKPY1ltsfvRW/G3VuyecRsXTxFMq2v0OpTT6pcmPoi/tU7cLY2jC85o
-        4eNx2FopddbaWsJydXJ+b1jRDbZ4lQuwx7Z+I8unikvv05lm2Pdf2cLZFqIR49SAcZ1PFZczw1U/nExL
-        bgdwDKSLa3BvxPhUcWkfqnQF0uov6jxFRNFLvWOzzXya2JwcMG5S53Fs7dPNa5Ofm3jZey48rsW7R83E
-        v0bPk5lINF8eoe6DI+vxITPBv957ghntOzsG2QKwk/Z+ppxzZDWKsFIu3Xg+1wTb5hWbM70Jl9vS2ZHq
-        Ef4T3mILwB/WVqN5/RlGOKctMCGsFlG0j7w2BQ+plcNAAfg9yfH3B+Ay+0R5OKXme8bmvH8OmADW3YhS
-        XuRpHy7W2flYXruD+StTC/tAqCWMHLA+ACQe1A5D939iHgMutte85B1OB7YKsB2wBXyzBFDNKQBpv2/G
-        8RiFI3YZTqnzPO0d5ACGWwDlMbY6wPJuAQj88buI9wR/6y0oALv5JwcoGjmA0UjAjuKFAzvK9g6wo1E6
-        4BW2A42O0e0cEEQAdrKxANZlHIV24O/3gNsBJoBqQj0DEBvwfhkDLqN1cgCDXU6s5pgv1hai0dl590iv
-        G/2VkEgkEolEIvmv+Hy/AboT74oURZo1AAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="btnRegistrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAATlJREFUaEPt
-        VtsNgzAMZJAO0P5XTMEQHYWxYDpqy7bsPCg/ocStTzpdSEJtnxPUIRAIBAKBQKAjPOb1dp/XDXRD1fGC
-        45G39Yu8AFQpALT/AiDpagFMLx3A41LSRQHYAeN4Ti9HCN122gFIkguQLw/S2SXG5Hfo6QhpB2R8eQGU
-        3BGXJ7tdENam+jspOVx7qKN0ru1F5QQLJdbX9pTDtQcG+AY5XHvgj5NT0gF6VvdkziqtCa3TVpUndkCT
-        TbU2Z9dyHu3hcO1hnRKXxTU7p0pJpnvqqjy1AHIo19qc1U9rNeVw7QEOjZYQjJnMTaCQjDpqxi/Za9/J
-        nzncNYBE4FtOTpaMvxLnQzqACRvnf6UDS/8FQKK7HYA5LwWQ46KG3jqASSfd8H4HnH6FKHkndyAQCAQC
-        gcD/YBjeyFcFZZmX8xgAAAAASUVORK5CYII=
-</value>
-  </data>
+  <metadata name="DataSetPrincipal.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="DataSetPrincipalBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>158, 17</value>
+  </metadata>
 </root>
